Added login and signup, reorganised packages

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.datasource.username=adzia
 spring.datasource.password=adzia
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+bgame.app.jwtSecret=BoardGameSecretKey
+bgame.app.jwtExpirationMs=86400000
